--- a/css/styles.css
+++ b/css/styles.css
@@ -267,13 +267,16 @@ img {
     gap: 24px;
 }
 
+.team-list li {
+    width: calc((100% - 72px) / 4);
+}
+
 .team-item {
     padding: 32px 0;
     text-align: center;
 }
 
 .team-part {
-    width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     background: var(--WHITE, #FFF);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 
@@ -400,8 +403,3 @@ img {
     display: inline-block;
     margin-bottom: 16px;
 }
-
-.container-footer {
-    padding: 100px 1020px 100px 156px;
-}
-
