--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ img {
 }
 
 .section-part {
-    width: calc((100% - 72px) / 4)
+    flex-basis: calc((100% - 72px) / 4);
 }
 
 .section-title {
@@ -267,16 +267,13 @@ img {
     gap: 24px;
 }
 
-.team-list li {
-    width: calc((100% - 72px) / 4);
-}
-
 .team-item {
     padding: 32px 0;
     text-align: center;
 }
 
 .team-part {
+    flex-basis: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     background: var(--WHITE, #FFF);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 
@@ -335,7 +332,8 @@ img {
     gap: 8px;
     align-self: stretch;
     margin: 32px 0;
-    border: 1px solid #e7e9fc
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-link {
