--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ img {
 }
 
 .team-part {
-    flex-basis: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4);
     border-radius: 0px 0px 4px 4px;
     background: var(--WHITE, #FFF);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 
