--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ img {
 }
 
 .section-part {
-    width: calc((100% - 3 * 24px) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
 .section-title {
@@ -338,7 +338,7 @@ img {
 
 .portfolio-link {
     background-color:#FFF;
-    width:calc((100% - 48px) / 3);
+    flex-basis: calc((100% - 48px) / 3);
     border: 1px solid var(--CORNFLOWER, #E7E9FC);
     background: var(--WHITE, #FFF);
 }
