--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ img {
 }
 
 .section-part {
-    flex-basis: calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 72px) / 4);
 }
 
 .section-title {
@@ -337,8 +337,8 @@ img {
 }
 
 .portfolio-link {
+    width: calc((100% - 48px) / 3);
     background-color:#FFF;
-    flex-basis: calc((100% - 48px) / 3);
     border: 1px solid var(--CORNFLOWER, #E7E9FC);
     background: var(--WHITE, #FFF);
 }
