--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ p {
 
 ul{
     margin: 0;
-    padding: 0;
+    padding: 0 ;
 }
 
 body {
@@ -325,14 +325,12 @@ img {
 }
 
 .port-item{
-    display: flex;
     padding: 32px 16px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     gap: 8px;
     align-self: stretch;
-    margin: 32px 0;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
@@ -340,7 +338,6 @@ img {
 .portfolio-link {
     flex-basis: calc((100% - 48px) / 3);
     background-color:#FFF;
-    border: 1px solid var(--CORNFLOWER, #E7E9FC);
     background: var(--WHITE, #FFF);
 }
 
@@ -349,7 +346,8 @@ img {
     font-size: 20px;
     line-height: 1.2; /* 120% */
     letter-spacing: 0.02em;
-    margin-bottom: 8px
+    margin-bottom: 8px;
+    font-weight: 500;
 }
 
 .portfolio-subsection {
@@ -378,7 +376,6 @@ img {
     line-height: 1.5; /* 150% */
     letter-spacing: 0.02em;
     width: 264px;
-    margin-top: 16px;
 }
 
 .footer-logo-s {
